hphp/hack/test/typecheck/destructure/duplicate_binding_bad.php.exp
ERROR: File "duplicate_binding_bad.php", line 6, characters 27-28:
Variable `$a` is bound multiple times in this destructuring pattern (Typing[4110])
  File "duplicate_binding_bad.php", line 6, characters 16-17:
  First binding was here
ERROR: File "duplicate_binding_bad.php", line 11, characters 13-14:
Variable `$a` is bound multiple times in this destructuring pattern (Typing[4110])
  File "duplicate_binding_bad.php", line 11, characters 9-10:
  First binding was here
ERROR: File "duplicate_binding_bad.php", line 16, characters 33-34:
Variable `$a` is bound multiple times in this destructuring pattern (Typing[4110])
  File "duplicate_binding_bad.php", line 16, characters 16-17:
  First binding was here
ERROR: File "duplicate_binding_bad.php", line 21, characters 27-28:
Variable `$_` is bound multiple times in this destructuring pattern (Typing[4110])
  File "duplicate_binding_bad.php", line 21, characters 16-17:
  First binding was here
